HVAC Backup 2/objects/Audit_Inventory__c(1).object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CP</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Channel Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Audit Inventory</relationshipLabel>
        <relationshipName>Audit_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Audit Inventory</relationshipLabel>
        <relationshipName>Audit_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SDE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audit_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Audit Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AI-{000000000}</displayFormat>
        <label>Audit Inventory  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>